# dd

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
dd-cli/: Cargo.toml
dd-cli/src/: agent.rs  context.rs  main.rs  paths.rs  run.rs
dd-client/: Cargo.toml
dd-client/src/: lib.rs  models.rs
dd-daemon/: Cargo.toml  PERFORMANCE.md
dd-daemon/src/: archive.rs  build.rs  containers.rs  events.rs  images.rs  main.rs  model.rs  networks.rs  registry.rs  runtime.rs  system.rs  util.rs  volumes.rs
dd-daemon/src/containers/: exec.rs  inspect.rs  lifecycle.rs  mod.rs
dd-gui/: Cargo.toml  build.rs
dd-gui/mac/: README.md  mac-image.sh  mac-userland.sh  shot.sh
dd-gui/package/: Info.plist.in  bundle.sh  dd-app.icns  make-dmg.sh
dd-gui/package/signing/: .gitignore  README.md
dd-gui/src/: mac.rs  main.rs  ui.rs  update.rs
dd-gui/src/ui/: mod.rs  theme.rs
dd-jit/: .clang-format  Cargo.toml  OPTIMIZATIONS.md  PLAN.md  README.md  build.rs  jit.entitlements
dd-jit/docs/: ARCHITECTURE.md  LAUNCH.md  REFACTOR.md
dd-jit/docs/design/: audit-x86-largeinput.md
dd-jit/src/: lib.rs
dd-jit/src/runtime/: ddjit_aarch64.c  ddjit_x86_64.c
dd-tests/: Cargo.toml
dd-tests/docs/: CHARTER.md  GAPS.md  IMAGE-MANIFEST.md  MEMORY-SCAN-jit.md  MEMORY-SCAN-os.md  TESTING.md
dd-tests/guests/: atexit.c  atomics.c  bigmem.c  bitops.c  busyloop.c  clockmono.c  dbserver.c  dup2redir.c  edge_abstract.c  edge_clockabstime.c  edge_fallocate.c  edge_lseekhole.c  edge_madvise.c  edge_mprotect.c  edge_msgpeek.c  edge_otmpfile.c  edge_pipepacket.c  edge_pipesz.c  edge_procfd.c  edge_renameat2.c  edge_scmrights.c  edge_sigpipe.c  edge_statfs.c  edge_times.c  environ.c  epoll.c  eventfd.c  eventfd_sema.c  fcntlflags.c  filelock.c  files.c  floatmath.c  fnptr.c  forkwait.c  getdents.c  getrandom.c  globmatch.c  heap.c  hello.c  inotify.c  (+57 more)
dd-tests/guests/bench/: b_base64.c  b_float.c  b_hash.c  b_int.c  b_mandel.c  b_matmul.c  b_memcpy.c  b_sort.c  b_sqlite.c  b_strings.c
dd-tests/guests/completeness/: arm_bf16.c  arm_bitfield.c  arm_crc32.c  arm_crypto_aes.c  arm_crypto_sha1.c  arm_crypto_sha256.c  arm_dotprod.c  arm_fp16.c  arm_i8mm.c  arm_ldpstp.c  arm_lse.c  arm_neon_abs.c  arm_neon_cmp.c  arm_neon_cvt.c  arm_neon_fp.c  arm_neon_int.c  arm_neon_minmax.c  arm_neon_perm.c  arm_neon_reduce.c  arm_neon_shift.c  arm_neon_tbl.c  arm_neon_widen.c  compat.h  sys_adjtimex.c  sys_auxval.c  sys_capget.c  sys_clock_getres.c  sys_clock_variants.c  sys_clone3.c  sys_close_range.c  sys_copy_file_range.c  sys_faccessat2.c  sys_fadvise.c  sys_fallocate.c  sys_fchmodat.c  sys_flock.c  sys_fsops.c  sys_fstatfs.c  sys_getcpu.c  sys_getentropy.c  (+57 more)
dd-tests/guests/darwin/: adrp.c  bsd_arc4random.c  bsd_copyfile.c  bsd_getattrlist.c  bsd_getpath.c  bsd_gettimeofday.c  bsd_procpath.c  bsd_progname.c  bsd_realpath.c  bsd_spawn.c  bsd_statfs.c  dispatch_apply.c  dispatch_async.c  dispatch_group.c  dispatch_once.c  dispatch_sem.c  dispatch_sync.c  hello  hello.c  kqueue.c  kqueue_signal.c  kqueue_timer.c  kqueue_user.c  kqueue_vnode.c  kqueue_write.c  mach_clock.c  mach_host.c  mach_hoststats.c  mach_port.c  mach_self.c  mach_task.c  mach_time.c  mach_vm.c  macho_ctor.c  macho_data.c  macho_hfa.c  macho_setjmp.c  macho_static.c  macho_stub.c  macho_tls.c  (+13 more)
dd-tests/guests/ext_abi/: alloca.c  atomics_st.c  bigswitch.c  boolconv.c  bswap.c  charmath.c  clmul.c  cmpchain.c  computed_goto.c  deep_recursion.c  divmod.c  endian.c  float32.c  fnptr_many.c  fp_classify.c  fp_cmp.c  fp_conv.c  fp_fma.c  fp_minmax.c  fp_round.c  fp_special.c  globalinit.c  hash.c  int128.c  intwrap.c  longdouble.c  manyargs.c  memops.c  mixedargs.c  mul64.c  nested_loops.c  overflow_builtin.c  popcnt.c  printf_formats.c  ptr_arith.c  qsort_cb.c  rettypes.c  rotate.c  setjmp_longjmp.c  shifts.c  (+12 more)
dd-tests/guests/ext_ipc/: ipc_dup_offset.c  ipc_eventfd.c  ipc_fifo_multi_writer.c  ipc_fifo_nonblock.c  ipc_fifo_twoway.c  ipc_flock_fork.c  ipc_lockf.c  ipc_mq.c  ipc_msgget_ftok.c  ipc_pipe.c  ipc_pipe_eof.c  ipc_pipe_poll.c  ipc_posix_sem_named.c  ipc_posix_shm.c  ipc_scm_rights.c  ipc_seqpacket.c  ipc_sockpair_dgram.c  ipc_sysv_msg.c  ipc_sysv_sem.c  ipc_sysv_shm.c
dd-tests/guests/ext_libc/: absdiv.c  assert_off.c  atox.c  bsearch.c  ctype_class.c  ctype_conv.c  errno_sym.c  fgets_fputs.c  fread_fwrite.c  fscanf.c  fseek_ftell.c  getline.c  locale_c.c  math_class.c  math_explog.c  math_frexp.c  math_gamma.c  math_hyper.c  math_misc.c  math_mod.c  math_round.c  math_trig.c  mbs_wcs.c  mem_move.c  printf_flags.c  printf_float.c  printf_hexfloat.c  printf_int.c  printf_len.c  printf_neg.c  printf_pos.c  printf_str.c  qsort_int.c  qsort_str.c  qsort_struct.c  rand_seq.c  setjmp_val.c  setvbuf.c  snprintf_ret.c  sscanf_mix.c  (+22 more)
dd-tests/guests/ext_linuxsys/: aio_pread.c  clock_linux.c  copy_file_range.c  epoll_et.c  epoll_mod.c  epoll_oneshot.c  epoll_pwait.c  epoll_reblock_fin.c  epoll_reblock_inf.c  eventfd_nonblock.c  fanotify.c  fstatfs.c  getcpu.c  getrandom_flags.c  gettid.c  inotify_modify.c  inotify_moves.c  io_uring.c  ioprio.c  membarrier.c  memfd_seal.c  personality.c  pidfd_open.c  pidfd_signal.c  prctl_dumpable.c  prctl_nnp.c  prctl_pdeathsig.c  process_vm.c  sched_affinity.c  sched_yield.c  signalfd_rt.c  syncfs.c  tee.c  timerfd_gettime.c  timerfd_interval.c  unshare_files.c  vmsplice.c
dd-tests/guests/ext_mem/: fdrss.c  forkrss.c  mallocfree.c  memrss.h  mmapfilerss.c  mmapfree.c  threadrss.c
dd-tests/guests/ext_net/: net_accept4.c  net_connect_refused.c  net_getaddrinfo.c  net_gethostname.c  net_getpeername.c  net_inet_pton.c  net_msg_dontwait.c  net_msg_peek.c  net_msg_waitall.c  net_peercred.c  net_poll_accept.c  net_select_multi.c  net_sendmsg_addr.c  net_so_linger.c  net_socket_cloexec.c  net_sockopt_buf.c  net_tcp_bulk.c  net_tcp_multi.c  net_unix_dgram.c  (+4 more)
dd-tests/scenarios/: compose-multinet.sh  compose.sh  docker-full.sh  docker-net.sh  docker.sh  macos-container.sh  realsw.sh  smoke-realimage.sh
dd-tests/src/: diag.rs  lib.rs  main.rs  scenario.rs
dd-tests/tests/: suite.rs
dd-tests/tools/: coverage.sh  memwatch.sh
(+329 files in other folders)
