[package]
name = "dd-cli"
version = "0.1.0"
edition = "2021"
description = "The `ddcli` command — run dd containers with easy-access defaults and manage the daemon, without root."
license = "MIT"

[[bin]]
name = "ddcli"
path = "src/main.rs"

[dependencies]
dd-client = { path = "../dd-client" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
sha2 = "0.10"
