[package]
name = "dd-client"
version = "0.4.0"
edition = "2021"
description = "Docker-Engine-API v1.43 client over a unix socket (wraps bollard), shared by the dd GUI and CLI."
license = "MIT"

[lib]
name = "ddclient"
path = "src/lib.rs"

[dependencies]
# Mature Docker-Engine-API client; this crate is a thin façade over it with dd view models.
bollard = "0.21"
futures-util = "0.3"
bytes = "1"
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }
