[package]
name = "dd-daemon"
version = "0.3.0"
edition = "2021"
description = "Docker-Engine-API daemon backed by the dd VM-less JIT runtime."
license = "MIT"

[[bin]]
name = "dd-daemon"
path = "src/main.rs"

[dependencies]
ddjit = { path = "../dd-jit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "process", "sync", "fs"] }
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
tower = { version = "0.5", features = ["util"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
libc = "0.2"
