[package]
name = "dd-tests"
version = "0.4.0"
edition = "2021"
default-run = "dd-tests"   # `cargo run -p dd-tests` → the basics matrix; the real-software runner is `--bin scenarios`
description = "dd engine test harness — declarative groups of guest tests, run across every JIT engine."

# The harness is a runner binary (great DX: grouped/colored output, filtering, summary). The same
# matrix is also exposed to `cargo test` via tests/suite.rs.
[[bin]]
name = "dd-tests"
path = "src/main.rs"

# Real-software surface: boots dd-daemon (its own engine) and drives popular images through it.
[[bin]]
name = "scenarios"
path = "src/bin/scenarios.rs"

[lib]
name = "dd_tests"
path = "src/lib.rs"

[dependencies]
ddjit = { path = "../dd-jit" }
